--- a/_posts/atividades/braille/2021-05-28-braille.markdown
+++ b/_posts/atividades/braille/2021-05-28-braille.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  Braille
 date:   2021-05-27 10:09:01 -0300
-categories: atividades
+categories: atividades braille
 ---
 
 ## Breve resumo
