--- a/_posts/atividades/psicologia/2021-05-27.markdown
+++ b/_posts/atividades/psicologia/2021-05-27.markdown
@@ -6,7 +6,7 @@ categories: atividades
 ---
 
 ## Breve resumo
-O objetivo do psicólogo é compreender e analisar os indivíduos a fim de solucionar problemas relacionados ao comportamento. 
+O objetivo do psicólogo é compreender e analisar os indivíduos a fim de solucionar problemas relacionados ao comportamento.
 
 ## Player de mídia
-Player...
+{% include embed-audio.html src="/assets/audio/sample/birds.mp3" %}
